--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+
+
+.app-nav{
+  background-color:blueviolet;
+  text-align: right;
+  font-size:20px;
+  padding:20px;
+  border-radius: 60px;
+  margin-top: 110px;
+  margin-bottom: 50px;
+  display:flex;
+
+}
+.app-nav span a{
+  text-decoration: none;
+  color:white;
+  margin-right: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.shadow{
+  /* box-shadow: #333 0px 1px 5px; */
+  box-shadow: rgb(67, 60, 60) 0px 5px 30px !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+
+.blog-container{
+  padding: 24px;
+  height: 500px;
+  background-color:rgb(172, 91, 144);
+  /* border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px; */
+  border-radius: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.like-btn:active{
+  background-color: rgb(56, 51, 51) !important;
 }
 
-.App-link {
-  color: #61dafb;
+
+.app-nav button{
+  margin-right: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.blog-container table tr{
+  height:50px;
+}
+
+.blog-container table .blog-list-btn{
+  width:450px;
+  height: 50px;
+  background-color: rgb(75, 75, 190);
+  color:white;
+  border-radius: 40px;
+  border: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  box-shadow: rgb(67, 60, 60) 0px 5px 10px !important;
+}
+
+.blog-container table .blog-category{
+  padding:4px;
+  background-color: green;
+  border-radius: 10px;
+  box-shadow: rgb(67, 60, 60) 0px 1px 5px !important;
 }
